Fix CORS and security config blocking Vercel frontend